scrol issue fixed on firefox

--- a/src/pages/TodoList/todolist.module.scss
+++ b/src/pages/TodoList/todolist.module.scss
@@ -29,6 +29,8 @@
     background-color: var(--white);
     overflow-y: scroll;
     border-radius: 5px;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 
 }
 
